# mvp-openspace

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
app/: __init__.py  auth.py  components.py  config.py  database.py  i18n.py  mailer.py  main.py  models.py  pycon.py  queries.py  security.py  seed.py  uploads.py
app/routes/: __init__.py  admin.py  manage.py  public.py
static/: app.css
tests/: conftest.py  test_flow.py
