[project]
name = "openspace-mvp"
version = "0.1.0"
description = "Open Space MVP — 컨퍼런스 토론 주제 스케줄링 플랫폼"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.12",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
